<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MAD Student Database App</string>
    <string name="title">MAD Student Data</string>
    <string name="enroll_no">Enroll No.: </string>
    <string name="name">Name: </string>
    <string name="marks">Mark: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">Search</string>
    <string name="view_all">View All</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="Phone">Phone</string>
</resources>
