<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:text="@string/title"
        android:layout_x="110dp"
        android:layout_y="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:text="@string/enroll_no"
        android:layout_x="30dp"
        android:layout_y="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editEnrollno"
        android:layout_x="155dp"
        android:layout_y="33dp"
        android:layout_width="150dp"
        android:layout_height="50dp"/>
    <TextView android:text="@string/name"
        android:layout_x="30dp"
        android:layout_y="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editName"
        android:inputType="text"
        android:layout_x="155dp"
        android:layout_y="81dp"
        android:layout_width="150dp"
        android:layout_height="50dp"/>
    <TextView android:text="@string/marks"
        android:layout_x="30dp"
        android:layout_y="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editMarks"
        android:inputType="numberDecimal"
        android:layout_x="155dp"
        android:layout_y="128dp"
        android:layout_width="150dp"
        android:layout_height="50dp"/>
    <TextView android:text="@string/Phone"
        android:layout_x="30dp"
        android:layout_y="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText android:id="@+id/editPhone"
        android:inputType="phone"
        android:layout_x="155dp"
        android:layout_y="180dp"
        android:layout_width="150dp"
        android:layout_height="50dp"/>
    <Button	  android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_x="30dp"
        android:layout_y="250dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_x="250dp"
        android:layout_y="250dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="140dp"
        android:layout_y="250dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnSearch"
        android:text="@string/view"
        android:layout_x="77dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_x="195dp"
        android:layout_y="300dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnFirst"
        android:text="@string/first"
        android:layout_x="25dp"
        android:layout_y="350dp"
        android:layout_width="75dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnPrev"
        android:text="@string/prev"
        android:layout_x="115dp"
        android:layout_y="350dp"
        android:layout_width="75dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnNext"
        android:text="@string/next"
        android:layout_x="205dp"
        android:layout_y="350dp"
        android:layout_width="75dp"
        android:layout_height="40dp"/>
    <Button   android:id="@+id/btnLast"
        android:text="@string/last"
        android:layout_x="290dp"
        android:layout_y="350dp"
        android:layout_width="75dp"
        android:layout_height="40dp"/>
</AbsoluteLayout>